fixing landscape view on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -220,7 +220,7 @@ section.intro{
     max-width: 8%;
   }
   .upperHeader{
-    max-height: 21%;
+    max-height: 47%;
   }
   .lowerHeader{
     justify-content: center;
